버그 수정 및 포기 기능 추가

--- a/game.html
+++ b/game.html
@@ -10,34 +10,32 @@
 
 <body>
     <header>
-        <div class="header">
-            <div class="info_left">
-                <div class="icon" id="icon1">
-                    <img src="imgs/icon.png" alt="">
-                </div>
-                <div class="text" id="showName1">이름</div>
-                <div class="text">TEXT</div>
-                <button class="guBtn" id="give_up1">포기</button>
+        <div class="info_left">
+            <div class="icon" id="icon1">
+                <img src="imgs/icon.png" alt="">
             </div>
+            <div class="text" id="showName1">이름</div>
+            <div class="text" id="userScore1">0</div>
+            <button class="guBtn" id="give_up1">포기</button>
+        </div>
 
-            <div class="gamePlaying">
-                <div id="gamePlaying">트럼프 카드게임</div>
-                <div id="sign">카드섞기를 눌러주세요!</div>
-            </div>
+        <div class="gamePlaying">
+            <div id="gamePlaying">트럼프 카드게임</div>
+            <div id="sign">카드섞기를 눌러주세요!</div>
+        </div>
 
-            <div class="info_right">
-                <div class="icon" id="icon2">
-                    <img src="imgs/icon.png" alt="">
-                </div>
-                <div class="text" id="showName2">이름</div>
-                <div class="text">TEXT</div>
-                <button class="guBtn" id="give_up2">포기</button>
+        <div class="info_right">
+            <div class="icon" id="icon2">
+                <img src="imgs/icon.png" alt="">
             </div>
+            <div class="text" id="showName2">이름</div>
+            <div class="text" id="userScore1">0</div>
+            <button class="guBtn" id="give_up2">포기</button>
         </div>
     </header>
 
 
-    <div class="playBoard">
+    <div id="playBoard">
         <table id="cards">
 
         </table>
