버그 수정 및 끝나는 로직 추가

--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
                 <img src="imgs/icon.png" alt="">
             </div>
             <div class="text" id="showName2">이름</div>
-            <div class="text" id="userScore1">0</div>
+            <div class="text" id="userScore2">0</div>
             <button class="guBtn" id="give_up2">포기</button>
         </div>
     </header>
@@ -51,7 +51,9 @@
         showName2.innerText = urlParams.get('user2');
     </script>
 
-    <script src="js/main.js" type="module"> </script>
+    <script src="js/main.js" type="module"> 
+        
+    </script>
 </body>
 
 </html>
