--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
         <label for="user2" class="label">사용자 2</label>
         <input type="text" id="user2" class="input" placeholder="플레이어 2 이름">
+
+        <label for="difficulty" class="label">난이도 조절</label>
+        <select size="1" id="difficulty">
+            <option value="1">하</option>
+            <option value="2">중</option>
+            <option value="3">상</option>
+        </select>
+
         <button id="startBtn" class="btn">시작</button>
     </div>
 
